<resources>
    <string name="app_name">OktatoApp</string>
    <string name="jatek">Játék</string>
    <string name="beallitasok">Beállítások</string>
    <string name="kilepes">Kilépés</string>
    <string name="kerdes">Kérdés</string>
    <string name="segitseg">Segítség</string>
    <string name="tovabb">Tovább</string>
    <string name="pontszam">Pontszám:</string>
    <string name="belepes">Belépés</string>
    <string name="felhasznalonev">Felhasználónév</string>
    <string name="jelszo">Jelszó</string>
    <string name="regi_jelszo">Régi jelszó</string>
    <string name="jelszo_megvaltoztatasa">Jelszó megváltoztatása</string>
    <string name="uj_jelsz_m_gegyszer">Új jelszó mégegyszer</string>
    <string name="gyermekek">Gyermekek</string>
    <string name="tanul_k">Tanulók</string>
    <string name="uj_jelsz">Új jelszó</string>
    <string name="friss_t_s">Frissítés</string>
    <string name="kitoltott">Kitöltött tesztek száma: </string>
    <string name="tesztek_atlagpontsz_ma">Tesztek átlagpontszáma: </string>
    <string name="szulo_neve">Szülő neve: </string>
    <string name="tema_ment_se_s_kil_p_s">Téma mentése és kilépés</string>
    <string name="kijelentkez_s">Kijelentkezés</string>
    <string name="ellen_rz_s">Ellenőrzés</string>
    <string name="parositsd">Párosítsd össze az eseményeket a hozzájuk tartozó évszámokkal!</string>
    <string name="v_lassz_j_t_km_dot">Válassz játékmódot!</string>
    <string name="kv_z">Kvíz</string>
    <string name="p_ros_t">Párosító</string>
    <string-array name="loginChoices_array">
        <item>Tanuló vagyok!</item>
        <item>Szülő vagyok!</item>
        <item>Tanár vagyok!</item>
    </string-array>
</resources>
