<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameChooserActivity">

    <TextView
        android:id="@+id/txt_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/v_lassz_j_t_km_dot"
        app:layout_constraintBottom_toTopOf="@id/radio_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="48dp"
        android:textSize="28sp"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radio_quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kv_z"
            android:textSize="24sp"
            android:checked="true"
            android:layout_marginBottom="4dp"/>

        <RadioButton
            android:id="@+id/radio_match"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p_ros_t"
            android:textSize="24sp"
            android:layout_marginTop="4dp"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="48dp"
        android:text="Indítás"
        />


</androidx.constraintlayout.widget.ConstraintLayout>