<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/gradient">

    <EditText
        android:id="@+id/txt_username"
        android:fontFamily="@font/margarine"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.5"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:hint="@string/felhasznalonev"
        android:text=""
        android:textColor="@color/yellow"
        android:textColorHint="@color/darkyellow"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/txt_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txt_password"
        android:fontFamily="@font/margarine"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.5"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/jelszo"
        android:inputType="textPassword"
        android:textColor="@color/yellow"
        android:textColorHint="@color/darkyellow"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_login"
        app:fontFamily="@font/margarine"
        style="@style/ButtonStyleForDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/belepes"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_password" />

    <Spinner
        android:id="@+id/loginSpinner"
        android:textColor="@color/blue"
        android:layout_width="311dp"
        android:layout_height="53dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/spinner"
        android:popupBackground="@drawable/spinner"
        app:fontFamily="@font/margarine"/>
</androidx.constraintlayout.widget.ConstraintLayout>